Fix various alignment issues for pages and checkout.

--- a/src/customizations/page-bottom/_page-bottom.scss
+++ b/src/customizations/page-bottom/_page-bottom.scss
@@ -38,7 +38,6 @@
 
         &--small {
             font-size: 1rem;
-            max-width: 20rem;
         }
     }
 
